--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -1,7 +1,3 @@
-<h1>
-    Hello World!!!
-</h1>
+<h1>Hello World!!!</h1>
 
-<h2>
-    Here comes the WebPlayer
-</h2>
+<h2>Here comes the WebPlayer</h2>
