edited index to extend layout.html

--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -1,3 +1,8 @@
-<h1>Hello World!!!</h1>
+{% extends "player/layout.html" %}
 
-<h2>Here comes the WebPlayer</h2>
+
+{% block title %}Home - Web Player{% endblock %}
+
+{% block body %}
+
+{% endblock %}
