--- a/musicplayer/player/templates/player/layout.html
+++ b/musicplayer/player/templates/player/layout.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Web Player{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 
 <body>
