--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -5,4 +5,22 @@
 
 {% block body %}
 
+<h1>Welcome</h1>
+<h2>Your Webplayer</h2>
+
+<br>
+<hr>
+
+<h4>Our Top choices for you</h4>
+
+<br>
+<hr>
+
+<h4>Latest Realeses</h4>
+
+<br>
+<hr>
+
+<h4>Your favorites</h4>
+
 {% endblock %}
