--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -8,19 +8,19 @@
 <h1>Welcome</h1>
 <h2>Your Webplayer</h2>
 
-<br>
+<!-- <br>
 <hr>
 
-<h4>Our Top choices for you</h4>
+<h4>Our Top choices for you</h4> -->
 
 <br>
 <hr>
 
 <h4>Latest Realeses</h4>
 
-<br>
+<!-- <br>
 <hr>
 
-<h4>Your favorites</h4>
+<h4>Your favorites</h4> -->
 
 {% endblock %}
