altered fields in models/renamed them

--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -18,6 +18,12 @@
 
 <h4>Latest Realeses</h4>
 
+<ul>
+    {% for song in latest %}
+    <li>song</li>
+    {% endfor %}
+</ul>
+
 <!-- <br>
 <hr>
 
