--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -18,16 +18,18 @@
 
 <h4>Latest Realeses</h4>
 <br>
-{% for song in latest %}
-<div>
-    {% if song.cover %}
-    <img src="{{ song.cover.url }}" alt="">
-    {% endif %}
-    <h3>{{ song.title }}</h3>
-    <h4>{{ song.artist }} {% if song.feat %}feat. {{ song.feat }}{% endif %}</h4>
+<div style="display:flex; flex-direction:row; flex-wrap: wrap;">
+    {% for song in latest %}
+    <div style="margin: 0 2rem 2rem 2rem">
+        {% if song.cover %}
+        <img src="{{ song.cover.url }}" alt="">
+        {% endif %}
+        <h3>{{ song.title }}</h3>
+        <h4>{{ song.artist }} {% if song.feat %}feat. {{ song.feat }}{% endif %}</h4>
+        <hr>
+    </div>
+    {% endfor %}
 </div>
-{% endfor %}
-
 <!-- <br>
 <hr>
 
