--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -26,6 +26,11 @@
         {% endif %}
         <h3>{{ song.title }}</h3>
         <h4>{{ song.artist }} {% if song.feat %}feat. {{ song.feat }}{% endif %}</h4>
+        <audio controls>
+            <source src="{{ song.song.url }}" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <h4>{{ song.album }}</h4>
         <hr>
     </div>
     {% endfor %}
