--- a/musicplayer/player/templates/player/index.html
+++ b/musicplayer/player/templates/player/index.html
@@ -28,6 +28,8 @@
         <h4>{{ song.artist }} {% if song.feat %}feat. {{ song.feat }}{% endif %}</h4>
         <audio controls>
             <source src="{{ song.song.url }}" type="audio/mpeg">
+            <source src="{{ song.song.url }}" type="audio/ogg">
+            <source src="{{ song.song.url }}" type="audio/wav">
             Your browser does not support the audio element.
         </audio>
         <h4>{{ song.album }}</h4>
